--- a/FXKJ.Infrastructure.WebApi/FXKJ.Infrastructure.WebApi.csproj
+++ b/FXKJ.Infrastructure.WebApi/FXKJ.Infrastructure.WebApi.csproj
@@ -76,6 +76,7 @@
     <Compile Include="BLL\TokenBLL.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Filter\ApiAuthorizeAttribute.cs" />
+    <Compile Include="Filter\ApiMenuAuthAttribute.cs" />
     <Compile Include="Filter\ApiExceptionAttribute.cs" />
     <Compile Include="Filter\ApiDCTAttribute.cs" />
     <Compile Include="Filter\ApiFilterAttribute.cs" />
@@ -101,6 +102,10 @@
       <Project>{77CF037D-57B0-4338-93EC-7415DD9B40CE}</Project>
       <Name>FXKJ.Infrastructure.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\FXKJ.Infrastructure.DataAccess\FXKJ.Infrastructure.DataAccess.csproj">
+      <Project>{410CB82B-7197-48F7-A24F-E8F750C9249F}</Project>
+      <Name>FXKJ.Infrastructure.DataAccess</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FXKJ.Infrastructure.Entities\FXKJ.Infrastructure.Entities.csproj">
       <Project>{DCA00954-825A-43AD-B3ED-CD54B38D77FD}</Project>
       <Name>FXKJ.Infrastructure.Entities</Name>
@@ -108,6 +113,10 @@
     <ProjectReference Include="..\FXKJ.Infrastructure.Log\FXKJ.Infrastructure.Log.csproj">
       <Project>{3BEF85F5-E1D8-4526-AE3A-416C19D32E81}</Project>
       <Name>FXKJ.Infrastructure.Log</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SalesStatisticPro\EntitiesModels\EntitiesModels.csproj">
+      <Project>{FD648777-7297-496B-B4F1-D5D46DFA60E7}</Project>
+      <Name>EntitiesModels</Name>
     </ProjectReference>
     <ProjectReference Include="..\SalesStatisticPro\NetRedisUtil\NetRedisUtil.csproj">
       <Project>{7F890A1A-EE96-486F-957F-9656A4E308DE}</Project>
