--- a/SalesStatisticPro/NetStackExchangeRedisUtil/NetStackExchangeRedisUtil.csproj
+++ b/SalesStatisticPro/NetStackExchangeRedisUtil/NetStackExchangeRedisUtil.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E8EF2CEF-D651-4DFD-8896-9B81CA107A28}</ProjectGuid>
+    <ProjectGuid>{382E912C-2413-43A9-9AE3-536A36B752F4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FXKJ.Infrastructure.Dapper</RootNamespace>
-    <AssemblyName>FXKJ.Infrastructure.Dapper</AssemblyName>
+    <RootNamespace>RedisHelp</RootNamespace>
+    <AssemblyName>RedisHelp</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -23,7 +24,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -31,12 +32,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\SalesStatisticPro\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="StackExchange.Redis, Version=1.1.608.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\StackExchange.Redis.1.1.608\lib\net45\StackExchange.Redis.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Configuration" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,28 +49,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DapperEx.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="RedisConnectionHelp.cs" />
+    <Compile Include="RedisUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SqlMapper.cs" />
-    <Compile Include="SqlMapperUtil.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FXKJ.Infrastructure.Core\FXKJ.Infrastructure.Core.csproj">
-      <Project>{77CF037D-57B0-4338-93EC-7415DD9B40CE}</Project>
-      <Name>FXKJ.Infrastructure.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FXKJ.Infrastructure.Log\FXKJ.Infrastructure.Log.csproj">
-      <Project>{3BEF85F5-E1D8-4526-AE3A-416C19D32E81}</Project>
-      <Name>FXKJ.Infrastructure.Log</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SalesStatisticPro\EntitiesModels\EntitiesModels.csproj">
-      <Project>{FD648777-7297-496B-B4F1-D5D46DFA60E7}</Project>
-      <Name>EntitiesModels</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="NetDLL\StackExchange.Redis.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
