--- a/SalesStatisticPro/WebApi/App_Data/appSettings.config
+++ b/SalesStatisticPro/WebApi/App_Data/appSettings.config
@@ -10,4 +10,6 @@
   <add key="cors_allowHeaders" value="*" />
   <add key="cors_allowMethods" value="*" />
   <add key="JWTSecretKey" value="123ewqasdzxc"/>
+
+  <!--<add key="redisKey" value=""/>-->
 </appSettings>
