--- a/SalesStatisticPro/WebApi/App_Data/connectionStrings.config
+++ b/SalesStatisticPro/WebApi/App_Data/connectionStrings.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <connectionStrings>
-  <add name="MyStrConn" providerName="System.Data.SqlClient" connectionString="Server=49.234.48.15;Database=SalesStatisticPro;User Id=sa;Password=good7453390dong.;MultipleActiveResultSets=true;" />
-  <!--<add name="MyStrConn" connectionString="Server=.;Initial Catalog=SalesStatisticPro;User Id=sa;Password=123;Integrated Security=True; Pooling=False;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
+  <!--<add name="MyStrConn" providerName="System.Data.SqlClient" connectionString="Server=49.234.48.15;Database=SalesStatisticPro;User Id=sa;Password=good7453390dong.;MultipleActiveResultSets=true;" />-->
+  <add name="MyStrConn" connectionString="Server=.;Initial Catalog=SalesStatisticPro;User Id=sa;Password=123;Integrated Security=True; Pooling=False;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+
+  <add name="RedisExchangeHosts" connectionString="127.0.0.1:6379,allowadmin=true,password=123,keepAlive=180"/>
 </connectionStrings>
