--- a/FXKJ.Infrastructure.DataAccess/FXKJ.Infrastructure.DataAccess.csproj
+++ b/FXKJ.Infrastructure.DataAccess/FXKJ.Infrastructure.DataAccess.csproj
@@ -33,6 +33,9 @@
     <Reference Include="EntityFramework">
       <HintPath>..\SalesStatisticPro\EntitiesModels\NetDLL\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\SalesStatisticPro\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -78,6 +81,10 @@
       <Project>{fd648777-7297-496b-b4f1-d5d46dfa60e7}</Project>
       <Name>EntitiesModels</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
