--- a/FXKJ.Infrastructure.Log/FXKJ.Infrastructure.Log.csproj
+++ b/FXKJ.Infrastructure.Log/FXKJ.Infrastructure.Log.csproj
@@ -72,5 +72,8 @@
       <Name>EntitiesModels</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
