--- a/SalesStatisticPro/WebApi/WebApi.csproj
+++ b/SalesStatisticPro/WebApi/WebApi.csproj
@@ -68,6 +68,9 @@
       <HintPath>..\packages\JWT.3.0.0\lib\net35\JWT.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Swagger.Net, Version=0.5.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Swagger.Net.0.5.5\lib\net40\Swagger.Net.dll</HintPath>
     </Reference>
@@ -124,9 +127,6 @@
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http">
     </Reference>
@@ -377,7 +377,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App_Data\connectionStrings.config" />
+    <None Include="App_Data\connectionStrings.config">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="NetDLL\Autofac.dll" />
@@ -555,8 +557,12 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="App_Data\redisConfig.config" />
-    <Content Include="App_Data\appSettings.config" />
+    <Content Include="App_Data\redisConfig.config">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="App_Data\appSettings.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Aspose\License.lic" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
@@ -599,6 +605,10 @@
     <ProjectReference Include="..\NetRedisUtil\NetRedisUtil.csproj">
       <Project>{7f890a1a-ee96-486f-957f-9656a4e308de}</Project>
       <Name>NetRedisUtil</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NetStackExchangeRedisUtil\NetStackExchangeRedisUtil.csproj">
+      <Project>{382e912c-2413-43a9-9ae3-536a36b752f4}</Project>
+      <Name>NetStackExchangeRedisUtil</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
